# wikipedia_network

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/data_collection/: __init__.py  article.py  batch_chunk.py  batch_file_manager.py  batch_metadata.py  record_index.py  scrape_playground_1.ipynb  scrape_playground_2.ipynb  scrape_playground_3.ipynb
